# rust-playground

./: .env  Cargo.toml  Makefile  clippy.toml  diesel.toml  memo.md  rds.md  readme.md  renovate.json
.github/workflows/: lint.yml
Q_20240502_claude3_karano_mondai/: Cargo.toml  readme.md
Q_20240502_claude3_karano_mondai/src/: main.rs  tokio_test.rs
scripts/: count_deps.py  readme.md
src/: abc076.rs  abc086_b.rs  abc129.rs  abc351_a.rs  abc352_a.rs  abc353.rs  abc362.rs  abc367.rs  ahc.rs  atcode_beginers_selection.rs  capitalize_first_letter.rs  cargo_toml_parse.rs  dieselsample.rs  gacha.rs  generic_where_plactice.rs  hypertest.rs  intro_heuristics.rs  macro_study.rs  main.rs  marker.rs  models.rs  q1.rs  q2.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs  q8.rs  q9.rs  read_json.rs  rust_study20240812.rs  rust_study20240812_anyhow.rs  rust_study_0510.rs  tokiotest.rs
src/q_20240502_claude3_karano_mondai/: 0510.md  abc076_b.md  abc086_B.md  abc352_a.md  ahc.md  capitalize_first_letter.md  intro_heuristics.md  lifetime.md  q1.md  q2.md  q3.md  q4.md  q4_pre.md  q5.md  q7.md  q8.md  q9.md
