[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
