[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple Rust playground"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.1", features = ["postgres"] }
dotenvy = "0.15.7"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
log = "0.4.21"
proconio = "0.4.5"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
